test/parser/too-short-nondecimal-literal.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:9: error: hex literal must have at least one digit after '0x'
var a = 0x;
